fix custom css for contrast errors wave tool

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,8 +3,8 @@
     color: #000;
     background-color: #fff;
     border: 2px solid #00a7b5;
-    outline: 1;
-    box-shadow: ;
+    outline: 5;
+    box-shadow: #00a7b5;
 
 }
 
